add options secion

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <![endif]-->
     <div class="container d-flex justify-content-center">
         <div class="main mt-4">
+
+            <!-- nav start -->
             <nav class="nav d-flex justify-content-end">
                 <div data-aos="fade-right" class="menu mr-5">
                     <button class="btn btn-link text-light menu-item">Home</button>
@@ -37,18 +39,59 @@
                     <button class="btn btn-dark font-weight-bold sign-up">Sign Up</button>
                 </div>
             </nav>
+            <!-- nav end -->
+
+            <!-- introduce start -->
             <div class="introduce d-flex justify-content-between mt-5">
-                <div data-aos="fade-right" class="texts">
+                <div data-aos="fade-right" class="texts mt-5">
                     <div class="title h2">A Guide To <span class="font-weight-bold">Rocky</span></div>
                     <div class="title h2">Mountain Vacations</div>
                     <p>Lorem ipsse saepe culpa praesentium quisquam sit deserunt repudquisquam sit deserunt rx ducimus dolorum neque adipisci quia laborum. Tempore, quia!</p>
                     <button class="btn text-light btn-blue font-weight-bold">Get Started</button>
                 </div>
                 <div data-aos="fade-left" class="image d-flex justify-content-center align-items-center">
-                    <img class="city" src="./images/Button 2.png " alt="city">
+                    <img class="city mb-5" src="./images/Button 2.png " alt="city">
                     <img class="position-absolute play" src="./images/play.png" alt="play">
                 </div>
             </div>
+            <!-- introduce end -->
+
+            <!-- options start -->
+            <div class="options row mt-5">
+
+                <div data-aos="fade-right" class="option col-3 d-flex flex-column">
+                    <div class="icon d-flex justify-content-center p-3 mb-3">
+                        <img src="./images/worldBook.svg" alt="book">
+                    </div>
+                    <span class="font-weight-bold  mb-3">First click tests</span>
+                    <p>Lorem ipsum dolor, sit um ipsum cupiditate.</p>
+                </div>
+
+                <div data-aos="fade-up" class="option col-3 d-flex flex-column">
+                    <div class="icon d-flex justify-content-center p-3 mb-3 bg-blue">
+                        <img src="./images/biohazard.svg" alt="biohazard">
+                    </div>
+                    <span class="font-weight-bold  mb-3">Desogn surveys</span>
+                    <p>Lorem ipsum dolor, ipsum ipsum dolor, sit cupiditate.</p>
+                </div>
+
+                <div data-aos="fade-up" class="option col-3 d-flex flex-column">
+                    <div class="icon d-flex justify-content-center p-3 mb-3">
+                        <img src="./images/handshake.svg" alt="handshake">
+                    </div>
+                    <span class="font-weight-bold  mb-3">Prefrence tests</span>
+                    <p>Lorem ipsum dolor, sit um ip cupiditate.</p>
+                </div>
+
+                <div data-aos="fade-left" class="option col-3 d-flex flex-column">
+                    <div class="icon d-flex justify-content-center p-3 mb-3">
+                        <img src="./images/person.svg" alt="person">
+                    </div>
+                    <span class="font-weight-bold  mb-3">User austronaut</span>
+                    <p>Lorem sit um  ipsum dolor, sit um ipsum sit um ip cupiditate.</p>
+                </div>
+            </div>
+            <!-- options end -->
         </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
