add leatn section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="main mt-4">
 
             <!-- nav start -->
-            <nav class="nav d-flex justify-content-end">
+            <nav class="nav d-flex justify-content-end mb-5">
                 <div data-aos="fade-right" class="menu mr-5">
                     <button class="btn btn-link text-light menu-item">Home</button>
                     <button class="btn btn-link text-light menu-item">About</button>
@@ -42,22 +42,22 @@
             <!-- nav end -->
 
             <!-- introduce start -->
-            <div class="introduce d-flex justify-content-between mt-5">
-                <div data-aos="fade-right" class="texts mt-5">
+            <div class="introduce d-flex justify-content-between mt-5 pt-3 row">
+                <div data-aos="fade-right" class="texts mt-5 col-5">
                     <div class="title h2">A Guide To <span class="font-weight-bold">Rocky</span></div>
                     <div class="title h2">Mountain Vacations</div>
                     <p>Lorem ipsse saepe culpa praesentium quisquam sit deserunt repudquisquam sit deserunt rx ducimus dolorum neque adipisci quia laborum. Tempore, quia!</p>
                     <button class="btn text-light btn-blue font-weight-bold">Get Started</button>
                 </div>
-                <div data-aos="fade-left" class="image d-flex justify-content-center align-items-center">
-                    <img class="city mb-5" src="./images/Button 2.png " alt="city">
+                <div data-aos="fade-left" class="image d-flex justify-content-center align-items-center col-7">
+                    <img class="city mb-5 w-100" src="./images/Button 2.png " alt="city">
                     <img class="position-absolute play" src="./images/play.png" alt="play">
                 </div>
             </div>
             <!-- introduce end -->
 
             <!-- options start -->
-            <div class="options row mt-5">
+            <div class="options row mt-5 mb-5">
 
                 <div data-aos="fade-right" class="option col-3 d-flex flex-column">
                     <div class="icon d-flex justify-content-center p-3 mb-3">
@@ -92,6 +92,42 @@
                 </div>
             </div>
             <!-- options end -->
+
+            <!-- learn start -->
+            <div class="leran row mt-5 pb-5">
+                <div class="image w-50 pt-5">
+                    <img class="w-100 mt-5" src="./images/illustrator.png" alt="illustrator">
+                </div>
+                <div data-aos="fade-up" class="check-list mt-5 pt-5 d-flex flex-column ml-5 justify-content-center align-items-start">
+                    <span class="h1 font-weight-bold mt-5">Learn with Proties</span>
+                    <div class="items text-capitalize">
+                        <div class="check-item mt-3">
+                            <img class="mr-2" src="./images/tick.svg" alt="tick"> beyond the naked eye
+                        </div>
+                        <div class="check-item mt-3">
+                            <img class="mr-2" src="./images/tick.svg" alt="tick"> make grilling a healthy experience
+                        </div>
+                        <div class="check-item mt-3">
+                            <img class="mr-2" src="./images/tick.svg" alt="tick"> make sure your ice is safe and clean
+                        </div>
+                        <div class="check-item mt-3">
+                            <img class="mr-2" src="./images/tick.svg" alt="tick"> peace on earth a wonderfull wish but no way
+                        </div>
+                        <div class="check-item mt-3">
+                            <img class="mr-2" src="./images/tick.svg" alt="tick"> get best advertiser your side pocket
+                        </div>
+                        <div class="check-item mt-3">
+                            <img class="mr-2" src="./images/tick.svg" alt="tick"> what's under your grill
+                        </div>
+                    </div>
+                    <div class="buttons mt-5 mb-5">
+                        <button class="btn text-light btn-blue font-weight-bold">Know More</button>
+                        <button class="btn text-blue btn-link font-weight-bold">Watch Video</button>
+                        <img src="./images/playSign.svg" alt="playSign">
+                    </div>
+                </div>
+            </div>
+            <!-- learn end -->
         </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
