add testomonial section

--- a/index.html
+++ b/index.html
@@ -128,6 +128,28 @@
                 </div>
             </div>
             <!-- learn end -->
+
+            <!-- testimonial start -->
+            <div class="testimonial row mt-5 d-flex justify-content-center">
+
+                <div data-aos="fade-up" class="item col-12 mt-5  d-flex flex-column text-center justify-content-center mb-3">
+                    <span class="h2 font-weight-bold text-capitalize">testimonial</span>
+                    <p>Lorem, ipsum dovoluptventore mollitia modi!</p>
+                </div>
+
+                <div data-aos="fade-up" class="item col-12 mt-5 d-flex flex-column align-items-center">
+                    <img class="avatar rounded" src="./images/me.png" alt="avatar">
+                    <span class="h2 font-weight-bold text-capitalize text-darkblue">abolfazl panahiazar</span>
+                    <p class="text-blue">the developer</p>
+                    <p class="text-blue text-center w-50">Lorem, ipsum dovoluptvento dovoluptventore ipsum dovoluptventore mollitia modi!</p>
+                </div>
+
+                <div data-aos="fade-up" class="item col-12 mt-5 d-flex flex-column text-center justify-content-center mb-3">
+                    <span class="h2 font-weight-bold text-capitalize">our story</span>
+                    <p>Lorem, ipsum dovoluptventore mollitia modi!</p>
+                </div>
+            </div>
+            <!-- testimonial end -->
         </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
