add pragraph section

--- a/index.html
+++ b/index.html
@@ -150,6 +150,35 @@
                 </div>
             </div>
             <!-- testimonial end -->
+
+            <!-- paragraph start -->
+            <div class="paragraphs mt-5 d-flex">
+
+                <div data-aos="fade-right" class="paragraph w-50 p-4">
+                    <div class="title">
+                        <img class="mr-2" src="./images/bird.svg" alt="bird">
+                        <span class="h4 font-weight-bold text-capitalize text-darkblue">who we are?</span>
+                    </div>
+                    <div class="text mt-3 ml-5">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae soluta eius laboriosam quisquam laborum nam atque, eum provident velit vel sequi incidunt, hic nesciunt, dolores cumque commodi veritatis. Sunt, vero?</p>
+                    </div>
+                    <div class="text mt-3 ml-5">
+                        <p><u>Incidunt, hic nesciunt,</u> incidunt, hic nesciunt, dolores cumque commodi veritatolores cumque commodi veritatis. Sunt, vero?</p>
+                    </div>
+                </div>
+
+                <div data-aos="fade-left" class="paragraph w-50 p-4">
+                    <div class="title">
+                        <img class="mr-2" src="./images/hand.svg" alt="hand">
+                        <span class="h4 font-weight-bold text-capitalize text-darkblue">what's up with the name?</span>
+                    </div>
+                    <div class="text mt-3 ml-5">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae soluta eius eius laboriosam <strong>laborum</strong>  nam atque,  nam atque, eum provident velit ve nam atque, eum provident velit vel sequium provident velit vel sequieum providnt velit vel sequi  nam atque, eum provident velit vel sequi incidunt, hic nesciunt, dolores cumque commodi veritatis. Sunt, vero?</p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- paragraph end -->
         </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
