add gallery section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,39 @@
 
             </div>
             <!-- paragraph end -->
+
+            <!-- testimonial start -->
+            <div class="testimonial row mt-5 d-flex justify-content-center">
+                <div data-aos="fade-up" class="item col-12 d-flex flex-column text-center justify-content-center mb-3">
+                    <span class="h2 font-weight-bold text-capitalize">our recent post</span>
+                    <p>Lorem, ipsum dovoluptventore mollitia modi!</p>
+                </div>
+            </div>
+            <!-- testimonial end -->
+
+            <!-- gallery start -->
+            <div class="gallery row">
+
+                <div data-aos="fade-right" class="item col-4">
+                    <img class="mb-3" src="./images/image1.png" alt="beach">
+                    <span class="h4 w-100 font-weight-bold text-capitalize">upgrading to microsoft windows vista tips</span>
+                    <p class="mt-2">By <strong>Abul Hasan Milton</strong>| 02 Feb 2019</p>
+                </div>
+
+                <div data-aos="fade-up" class="item col-4">
+                    <img class="mb-3" src="./images/image2.png" alt="beach">
+                    <span class="h4 w-100 font-weight-bold text-capitalize text-blue">finally a top great way you can get google</span>
+                    <p class="mt-2">By <strong>Milton Mahmood</strong>| 06 Feb 2019</p>
+                </div>
+
+                <div data-aos="fade-left" class="item col-4">
+                    <img class="mb-3" src="./images/image3.png" alt="island">
+                    <span class="h4 w-100 font-weight-bold text-capitalize">the universe through a child s eyes</span>
+                    <p class="mt-2">By <strong>Speed Smith</strong>| 08 Feb 2019</p>
+                </div>
+
+            </div>
+            <!-- gallery end -->
         </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
