add mail section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -190,7 +194,7 @@
             <!-- testimonial end -->
 
             <!-- gallery start -->
-            <div class="gallery row">
+            <div class="gallery row mb-5">
 
                 <div data-aos="fade-right" class="item col-4">
                     <img class="mb-3" src="./images/image1.png" alt="beach">
@@ -212,6 +216,34 @@
 
             </div>
             <!-- gallery end -->
+
+            <div class="space-100"></div>
+
+            <!-- mail start -->
+            <div class="mail bg-blue row rounded mt-3">
+                <div class="mail-in-left col-6 rounded d-flex justify-content-end">
+                    <span class="h6 w-50 text-light font-weight-bold text-capitalize mr-2">get update protips newsletter</span>
+                </div>
+                <div class="mail-in-right col-6 rounded">
+                    <div class="input rounded bg-transparent d-flex justify-content-start">
+                        <input class="form-control bg-transparent text-light" type="mail" placeholder="Enter your email">
+                        <div class="icon text-center">
+                            <i class="fab fa-telegram text-light"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- mail end -->
+
+            <div class="space-100"></div>
+            <div class="space-100"></div>
+            <hr>
+
+            <!-- footer start -->
+            <footer>
+
+            </footer>
+            <!-- footer end -->
         </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
