--- a/index.html
+++ b/index.html
@@ -238,12 +238,50 @@
             <div class="space-100"></div>
             <div class="space-100"></div>
             <hr>
+            <div class="space-50"></div>
 
             <!-- footer start -->
-            <footer>
-
+            <footer data-aos="fade-up" class="row d-flex justify-content-between">
+                <div class="col-4 mt-5">
+                    <p>Lorem ipsum piente eos adipisc. Laudantium perspiciatis ducimus deserunt. Voluptates, ad.</p>
+                </div>
+                <div class="col-2">
+                    <span class="h5 font-weight-bold text-capitalize mr-2">quick links</span>
+                    <ul class="list-group mt-4">
+                        <li class=""><a class="text-dark" href="#">About us</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Blog</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Contact</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <span class="h5 font-weight-bold text-capitalize mr-2">pages</span>
+                    <ul class="list-group mt-4">
+                        <li class=""><a class="text-dark" href="#">Disclaimer</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Financing</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Privacy Policy</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <span class="h5 font-weight-bold text-capitalize mr-2">Legal Stuff</span>
+                    <ul class="list-group mt-4">
+                        <li class=""><a class="text-dark" href="#">Disclaimer</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Financing</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Privacy Policy</a></li>
+                        <li class="mt-1"><a class="text-dark" href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
             </footer>
+
+            <div class="space-50"></div>
+            <hr>
+
+            <div class="designed text-center">
+                <span >Design by <em class="text-danger">@Abolfazl.panhiazar</em></span>
+            </div>
             <!-- footer end -->
+
         </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
